<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!--
To build javadoc:
javadoc:javadoc

To see updated versions available: http://mojo.codehaus.org/versions-maven-plugin/
versions:display-dependency-updates

To see third-party licenses: http://mojo.codehaus.org/license-maven-plugin/
license:add-third-party

pmd:cpd reports on cut and pasted code in your project.

Show the dependency tree:
http://maven.apache.org/plugins/maven-dependency-plugin/examples/resolving-conflicts-using-the-dependency-tree.html
dependency:tree

Release:
http://central.sonatype.org/pages/apache-maven.html
	-->
	<groupId>org.organicdesign</groupId>
	<artifactId>UncleJim</artifactId>
	<version>0.10.11</version>
	<packaging>jar</packaging>

	<name>UncleJim</name>
	<description>Immutable Clojure collections and a Transformation abstraction for Java 8+, immutably, type-safely, and with good performance.</description>
	<url>https://github.com/GlenKPeterson/UncleJim</url>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<comments>The license for most of the files in this
				project.</comments>
		</license>
		<license>
			<name>Eclipse Public License - v 1.0</name>
			<url>http://www.eclipse.org/legal/epl-v10.html</url>
			<comments>For the persistent collections in the
				collections/ folder. These files are derivative
				works based on the Clojure source code.</comments>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Glen K. Peterson</name>
			<email>glen@organicdesign.org</email>
			<organization>PlanBase Inc.</organization>
			<organizationUrl>http://glenpeterson.blogspot.com/</organizationUrl>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:https://github.com/GlenKPeterson/UncleJim.git</connection>
		<developerConnection>scm:git:https://github.com/GlenKPeterson/UncleJim.git</developerConnection>
		<url>https://github.com/GlenKPeterson/UncleJim.git</url>
	</scm>
	<build>
		<defaultGoal>compile</defaultGoal>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<!--
                    I'm favoring the maven.compiler properties over this for now...
					<compilerVersion>1.8</compilerVersion>
					<source>1.8</source>
					<target>1.8</target>
					 -->
					<compilerArgs>
						<arg>-profile</arg>
						<arg>compact1</arg>
						<arg>-Xlint</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<!-- JavaDoc wasn't providing the right links to the Java APIs with the default version of the plugin on my machine. -->
				<version>2.10.2</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.3</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>oss.sonatype.org</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<distributionManagement>
		<repository>
			<id>oss.sonatype.org</id>
			<name>Sonatype Repository</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>
	</distributionManagement>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
</project>
